--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Welcome to my Webpage</h1>
     <img src="tyler.png" alt="Image of Tyler">
     <p>come back to see more changes</p>
-    <a href="https://tylerbarty-mariokart-stats.streamlit.app" a>Checkout my Mariokart Streamlit App</a>
+    <a href="https://tylerbarty-mariokart-stats.streamlit.app" a>Checkout my Mariokart Streamlit App</a><br>
+    <a href="looker.html">Check out my Looker Dashboard</a>
+    <a href="tableau.html">Check out a Tableau Visualization</a>
 </body>
 </html>
