--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="tyler.png" alt="Image of Tyler">
     <p>come back to see more changes</p>
     <a href="https://tylerbarty-mariokart-stats.streamlit.app" a>Checkout my Mariokart Streamlit App</a><br>
-    <a href="looker.html">Check out my Looker Dashboard</a>
-    <a href="tableau.html">Check out a Tableau Visualization</a>
+    <a href="looker.html">Check out my Looker Dashboard</a><br>
+    <a href="tableau.html">Check out a Tableau Visualization</a><br>
 </body>
 </html>
