--- a/looker.html
+++ b/looker.html
@@ -6,7 +6,7 @@
     <title>Looker Dashboard</title>
 </head>
 <body>
-    <a href="index.html">Back to Main Page</a>
+    <a href="index.html">Back to Main Page</a><br>
     <iframe width="780" height="1040" src="https://lookerstudio.google.com/embed/reporting/1aadff67-b930-4744-bbb8-adc57a7c9cc3/page/V8u3C" frameborder="0" style="border:0" allowfullscreen></iframe>
 </body>
 </html>
