Adding Mariokart site

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="https://tylerbarty-mariokart-stats.streamlit.app" a>Checkout my Mariokart Streamlit App</a><br>
     <a href="looker.html">Check out my Looker Dashboard</a><br>
     <a href="tableau.html">Check out a Tableau Visualization</a><br>
+    <a href="mariokart_site/index.html">go to Mariokart Analytics Site for GA4</a>
 </body>
 </html>
