--- a/mariokart_site/multi_page/header.html
+++ b/mariokart_site/multi_page/header.html
@@ -28,7 +28,7 @@
             <a href="Tableau.html">&nbsp;BI Visualizations&nbsp;</a>
         </li>
         <li>
-            <a href="https://tylerbarty.github.io/github_assignment/">&nbsp;Back to BI Site&nbsp;</a>
+            <a href="github_assignment/index.html">&nbsp;Back to BI Site&nbsp;</a>
         </li>
     </ul>
 </div>
